2010-04-26  Andrew John Hughes  <ahughes@redhat.com>

	Use build directories outside the source
	tree and use lightweight copies for external
	source trees where possible.
	* Makefile.am:
	(OS_DIR): Removed.
	(BUILD_DIR): Set to openjdk.build.
	(BUILD_OUTPUT_DIR): Use BUILD_DIR.
	(BOOT_BUILD_OUTPUT_DIR): Extend BUILD_OUTPUT_DIR with '-boot'.
	(ICEDTEA_ENV): Set output directory.
	(ICEDTEA_ENV_BOOT): Likewise.
	(clean-icedtea): Simplify by just removing BUILD_OUTPUT_DIR.
	(clean-icedtea-boot): Likewise, but BOOT_BUILD_OUTPUT_DIR is removed.
	(extract-openjdk.stamp): Use lightweight copies where possible.
	(generated.stamp): Likewise.
	(liveconnect-dist.stamp): Likewise.
	(netx-dist.stamp): Likewise.
	(plugin-tests.stamp): Likewise.

2010-06-07 Andrew John Hughes  <ahughes@redhat.com>

	Make BOOT_BUILD_OUTPUT_DIR absolute and dispense
	with ICEDTEA_BUILD_DIR and ICEDTEA_BUILD_DIR_ECJ.
	* Makefile.am:
	(ICEDTEA_BUILD_DIR): Dropped.
	(ECJ_BUILD_OUTPUT_DIR): Make absolute.
	(ICEDTEA_CLS_DIR_BOOT): Make relative to ECJ_BUILD_OUTPUT_DIR.
	(ICEDTEA_BUILD_DIR_BOOT): Dropped.
	(bootstrap-directory.stamp): Use BOOT_BUILD_OUTPUT_DIR
	rather than ICEDTEA_BUILD_DIR_BOOT.  Remove unneeded
	$(abs_top_builddir).
	(icedtea-debug.stamp): Add pulse java src.zip update.
	(ADD_ZERO_EXTRA_BUILD_ENV): Replace ICEDTEA_BUILD_DIR
	with BUILD_OUTPUT_DIR.
	(check-hotspot): Replace unneeded use of pwd.
	(check-jdk): Likewise.
	(check-langtools): Likewise.

2010-06-04 Jon VanAlten  <jon.vanalten@redhat.com>

	PR icedtea/438
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioLine.java:
	(isControlSupported): Correctly determine if control-type is
	supported.
	* Makefile.am
	(stamps/icedtea.stamp): Add PulseAudio sources to src.zip

2010-06-01  Xerxes Rånby  <xerxes@zafena.se>

	* Makefile.am:
	(rewrite-rhino.stamp): Use full path to
	jar application to avoid relying on the one
	on the path.

2010-05-20  Gary Benson  <gbenson@redhat.com>

	PR icedtea/494