@@ -3,18 +3,18 @@
 OPENJDK_VERSION = b89
 
 CORBA_CHANGESET = e805b4155d76
-HOTSPOT_CHANGESET = de6965fd4cc5
+HOTSPOT_CHANGESET = 5a92a37da3b9
 JAXP_CHANGESET  = 826bafcb6c4a
 JAXWS_CHANGESET = 1661166c82dc
-JDK_CHANGESET = 3d1a836736bf
+JDK_CHANGESET = 2dead33effe1
 LANGTOOLS_CHANGESET = 681f1f51926f
 OPENJDK_CHANGESET = 195fcceefddc
 
 CORBA_SHA256SUM = 870e2eac993a4eef48197ed7309cab176b56a994add1de215a026599052627cb
-HOTSPOT_SHA256SUM = be6833f5e7a30091173a7099da9bae304df9e0868403b05660c10a574b4fd2fc
+HOTSPOT_SHA256SUM = f3dbd5689769cac89951a2e762db6ad2365942f7f99d69c33e96874622f09d7d
 JAXP_SHA256SUM = 42d004e51a1f01d146ad230ce48996ddf8da3719fe571a41653f431d6b2e8a7b
 JAXWS_SHA256SUM = 4523909cd46fd61b5c6670bf932099d5899236a37a4058e7b2bcb855e503a0e4
-JDK_SHA256SUM = 637372a089a1d50dc85d098e8b897d01e001730dd0ed94a6d347243272dedeeb
+JDK_SHA256SUM = ef0d2624d6844516ac079483ea576623733ce0f27fd57bb359ffe07f7c4ac60f
 LANGTOOLS_SHA256SUM = 5ff6f2a6d15403ed8d948a07204904f6ce60e363bd0516e22f1cae830aba84f8
 OPENJDK_SHA256SUM = 93c536e6bc4e962050a00321e88e694fc4e0000e2ad887b8de22830bfda2649f
 
